--- a/app/src/main/res/layout/custom_notification_large.xml
+++ b/app/src/main/res/layout/custom_notification_large.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="265dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/custom_notification_large_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is expanded"
-        android:textAlignment="textStart"
-        android:padding="20dp"
         style="@style/TextAppearance.Compat.Notification"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="This is expanded"
+        android:textAlignment="textStart" />
+
     <ImageView
         android:id="@+id/custom_notification_large_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="265dp"
+        app:srcCompat="@drawable/ic_launcher_background" />
+</LinearLayout>
+
+    <!--    <ImageView-->
+<!--        android:id="@+id/custom_notification_large_image"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        app:srcCompat="@drawable/ic_launcher_background"/>-->
+
 </LinearLayout>
