--- a/app/src/main/res/layout/custom_notification_small.xml
+++ b/app/src/main/res/layout/custom_notification_small.xml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
-    android:gravity="center">
-    <TextView
-        android:id="@+id/custom_notification_small_text"
-        style="@style/TextAppearance.Compat.Notification.Title"
-        android:layout_height="wrap_content"
+    android:layout_height="94dp"
+   >
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:text="Message"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="2"
+        android:padding="15dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            >
+            <ImageView
+                android:layout_width="19dp"
+                android:layout_height="19dp"
+                android:paddingRight="5dp"
+                android:src="@mipmap/ic_launcher"></ImageView>
+            <TextView
+                android:id="@+id/custom_notification_small_text"
+                style="@style/TextAppearance.Compat.Notification.Title"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="Message"
+                />
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="This is stuff">
+        </TextView>
 
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/custom_notification_large_image"
+        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 </LinearLayout>
