--- a/app/src/main/res/layout/custom_notification_small.xml
+++ b/app/src/main/res/layout/custom_notification_small.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:padding="15dp">
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,19 +47,24 @@
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/TextAppearance.Compat.Notification.Line2"
-            android:text="This is stuff"
-            android:ellipsize="end"
-            android:singleLine="false">
+            android:layout_height="match_parent"
+            style="@style/TextAppearance.Compat.Notification"
+            android:maxLines="2"
+            android:text="At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint "
+            android:ellipsize="end">
         </TextView>
 
     </LinearLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_weight="2">
     <ImageView
         android:id="@+id/custom_notification_large_image"
         android:scaleType="centerCrop"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        />
+</LinearLayout>
+
 </LinearLayout>
